fix: search position absolute covering navbar

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -86,6 +86,7 @@ figure figcaption {
   font-size: 0.8rem;
 }
 
+/* Spacings */
 .margin-bottom--2xl {
   margin-bottom: 12rem;
 }
@@ -94,8 +95,17 @@ figure figcaption {
   padding-bottom: 12rem;
 }
 
+/* Colors  */
 .bg-color-infima {
   background-color: var(--ifm-hero-background-color);
+}
+
+/* Position */
+.position-relative {
+  position: relative !important;
+}
+.position-static {
+  position: static !important;
 }
 
 /* navbar */
