--- a/src/theme/Navbar/Content/styles.module.css
+++ b/src/theme/Navbar/Content/styles.module.css
@@ -1,6 +1,10 @@
 /*
 Hide color mode toggle in small viewports
  */
+.navbarItemsCustom {
+  column-gap: 0.75rem;
+}
+
 @media (max-width: 996px) {
   .colorModeToggle {
     display: none;
